asm_tests/other_testfiles/valid_files/champ4.s
.name "champ4"
.comment "Hello world"

live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# live %0
# 