asm_tests/other_testfiles/invalid_files/error53.s
.name "MORO"
.comment "MORJESTA!"

kissa:
	live %12
.name:
